--- a/src/Data/Pages/Home/BetNow/BetNow.css
+++ b/src/Data/Pages/Home/BetNow/BetNow.css
@@ -2,63 +2,114 @@
   display: none;
 }
 
+@keyframes BetNowAnimation {
+  from {background-color: rgb(0, 0, 0, 0)}
+  to {background-color: rgb(0, 0, 0, 0.5)}
+}
+
 .BetNow {
   position: absolute;
   background-color: rgb(0, 0, 0, 0.5);
   top: -190px;
   width: 100%;
-  height: 100vh;
+  height: 100.50vh;
 
   display: flex;
   justify-content: center;
-
+  align-items: center;
   z-index: 2;
+
+  animation-name: BetNowAnimation;
+  animation-duration: .2s;
 }
+
+@keyframes BetNowMainAnimation {
+  from {transform: scale(0.0)}
+  to {transform: scale(1)}
+}
+
 
 .BetNow .BetNowMain {
   position: absolute;
   background-color: rgb(255, 255, 255);
-
-  top: 50px;
-
-  width: 750px;
+  width: 650px;
   height: 500px;
-
   border-radius: 10px;
   display: flex;
   z-index: 3;
-
   overflow: hidden;
+
+  animation-name: BetNowMainAnimation;
+  animation-duration: .2s;
+  
 }
 
-.BetNow .BetNowMain .Header {
+.BetNow .BetNowMain .Header{
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.25);
+  background-color: rgba(0, 0, 0, 0.0);
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
   width: 100%;
   height: 50px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
-  z-index: 50;
 }
 
-.BetNow .BetNowMain .Body .Background {
-  width: 100%;
-  height: 100%;
-}
-
-.BetNow .BetNowMain .Body .Background img {
-  width: 100%;
-  height: 100%;
-
-  -webkit-filter: blur(10px);
-  filter: blur(10px);
-  transform: scale(1.1);
-
-  overflow: hidden;
-}
-
-.BetNow .BetNowMain .CloseButton {
+.BetNow .BetNowMain .Header .CloseButton {
   position: absolute;
-
   right: 0px;
+
+  z-index: 100;
+}
+
+.BetNow .Body {
+  width: 100%;
+
+  position: relative;
+  display: flex;
+
+  flex-direction: column;
+
+  align-items: center;
+
+}
+
+.BetNow .Body .TeamsVersus {
+  top: 25%;
+  width: 350px;
+
+  height: 200px;
+
+  justify-content: space-around;
+  transform: scale(1.5);
+}
+
+.BetNow-TeamNameText {
+  color: #333;
+  padding-top: 5px;
+  
+}
+
+.BetNow .Body .BetNow-Data {
+  
+  
+  margin-top: 60px;
+
+  min-width: 60%;
+  width: 80%;
+  min-height: 200px;
+  height: 200px;
+}
+
+.BetNow-Data .Data {
+  margin-top: -5px;
+  padding-bottom: 10px;
+}
+
+.BetNow-Data .Data3  {
+  position: relative;
+  top: 50%;
+}
+  .BetNow-Data .Data3 .TeamButton {
+  margin:0px 10px;
+  width: 200px;
 }
