--- a/src/Data/Pages/Home/LiveMatch/LiveMatch.css
+++ b/src/Data/Pages/Home/LiveMatch/LiveMatch.css
@@ -34,7 +34,7 @@
   transition: all 0.2s ease-in-out;
 }
 
-.Contener-Box:hover {
+.LiveMatch-Body .Contener-Box:hover {
   transform: scale(1.025);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 }
@@ -44,7 +44,8 @@
   height: 175px;
 }
 
-.backgroundImg {
+
+.Contener-Box .Image .backgroundImg img {
   filter: blur(4px);
   -webkit-filter: blur(4px);
 
