--- a/src/Data/Pages/Home/Toolbar/Toolbar.css
+++ b/src/Data/Pages/Home/Toolbar/Toolbar.css
@@ -6,7 +6,7 @@
   justify-content: space-around;
 }
 
-.Toolbar {
+.Contener-Main .Toolbar {
   width: 175px;
   height: 50px;
   border-radius: 10px;
@@ -16,14 +16,15 @@
 
   display: flex;
   align-items: center;
+  transform: scale(1);
 
   transition: all 0.2s ease-in-out;
 }
 
-.Toolbar:hover {
+.Contener-Main .Toolbar:hover {
   transform: scale(1.05);
   cursor: pointer;
-  background: rgba(220, 20, 60, 0.75);
+  background-color: rgba(220, 20, 60, 0.75);
 }
 
 .Toolbar .Logo {
