--- a/src/Data/Pages/Home/Toolbar/Toolbar.css
+++ b/src/Data/Pages/Home/Toolbar/Toolbar.css
@@ -12,6 +12,8 @@
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 
+  background-color: white;
+
   /*margin-right: 20px;*/
 
   display: flex;
